Created test for variables

--- a/rettangoli.config.yaml
+++ b/rettangoli.config.yaml
@@ -40,3 +40,5 @@ vt:
           files: "save"
         - title: "Keyboard"
           files: "keyboard"
+        - title: "Variables"
+          files: "variables"
