--- a/src/schemas/systemActions.yaml
+++ b/src/schemas/systemActions.yaml
@@ -88,7 +88,17 @@ properties:
             op:
               type: string
               description: Operation to perform on the variable
-              enum: [set, add, subtract, multiply, divide, increment, decrement]
+              enum:
+                [
+                  set,
+                  add,
+                  subtract,
+                  multiply,
+                  divide,
+                  increment,
+                  decrement,
+                  toggle,
+                ]
             value:
               description: Value to use in the operation
               oneOf:
