--- a/vt/specs/save/multi-slot-test.yaml
+++ b/vt/specs/save/multi-slot-test.yaml
@@ -300,7 +300,7 @@ resources:
                     updateVariable:
                       operations:
                         - variableId: playerGold
-                          op: add
+                          op: increment
                           value: 100
 
             - id: btnGoldReset
